--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   flutter_native_splash: ^1.3.2
   curved_navigation_bar: ^1.0.1
+  flutter_bloc:
+  equatable:
 
 
 
